[package]
name = "nls-ls"
version = "0.2.0"
edition = "2021"
categories = ["command-line-utilities"]
description = "Yet another ls(1) implementation"
exclude = ["/.github/", "/completions/", "/doc/", "Makefile"]
homepage = "https://github.com/bydlw98/nls-ls"
keywords = ["ls"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bydlw98/nls-ls"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nls"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.4.6", features = ["cargo", "wrap_help"] }
clap_complete = "4.4.3"
clap_mangen = "0.2.14"

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.31", default-features = false, features = [
    "std",
    "clock",
] }
clap_lex = "0.5.1"
ignore = "0.4.20"
libc = "0.2.148"
once_cell = "1.18.0"
terminal_size = "0.3.0"
unicode-width = "0.1.11"
log = "0.4.20"
env_logger = "0.10.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3.8.1"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
