[package]
name = "nls-ls"
version = "0.4.0"
edition = "2021"
categories = ["command-line-utilities"]
description = "Yet another ls(1) implementation"
exclude = ["/.github/", "/completions/", "/doc/", "Makefile"]
homepage = "https://github.com/bydlw98/nls-ls"
keywords = ["ls"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bydlw98/nls-ls"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nls"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.4.6", features = ["cargo", "wrap_help"] }
clap_complete = "4.4.3"
clap_mangen = "0.2.14"

[dependencies]
anyhow = "1.0.80"
cfg-if = "1.0.0"
chrono = { version = "0.4.35", default-features = false, features = [
    "std",
    "clock",
] }
env_logger = "0.11.3"
ignore = "0.4.22"
lexopt = "0.3.0"
libc = "0.2.153"
log = "0.4.21"
nls_term_grid = "0.2.0"
once_cell = "1.19.0"
terminal_size = "0.3.0"
unicode-width = "0.1.11"
user_utils = "0.1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
